--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
 	
 <!--respond.js - https://github.com/scottjehl/Respond - Enables media queries in some unsupported browsers-->
+<!--[if (lt IE 9) & (!IEMobile)]>
 <script type="text/javascript" src="js/respond.min.js"></script>
+<![endif]-->
 
 </head>
 
