--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
 			<p>3 / 4 columns</p>
 		</div>
 	</div>
+	
+	<div class="row">
+		<div class="col-2-3">
+			<p>2 / 3 columns</p>
+		</div>
+		<div class="col-1-3">
+			<p>1 / 3 columns</p>
+		</div>
+	</div>
 
 	<div class="row">
 		<div class="col-1-2">
